Update launcher to download all dependencies and build full classpath from bootstrap.json artifacts array.